# Moss_TTS-ComfyUI

./: .gitattributes  .gitignore  README.md  README_zh.md  __init__.py  install.py  loader.py  native.py  nodes.py  pyproject.toml  requirements.txt  runtime.py  whisper.py
assets/moss-audio-tokenizer-v2/: .gitignore  README.md  __init__.py  config.json  configuration_moss_audio_tokenizer.py  modeling_moss_audio_tokenizer.py
assets/moss-tts-local-transformer-v1.5/: README.md  added_tokens.json  config.json  modeling_moss_tts.py  processing_moss_tts.py  processor_config.json  special_tokens_map.json  tokenizer_config.json
example_workflows/: moss_tts_1.5_example_workflow.json
tests/: test_runtime_management.py
